<resources>
    <string name="app_name">Watch G1</string>
    <string name="smart_watch_g1">Smart Watch G1</string>
    <string name="trecoops">treCoops</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="waiting_time">Waiting Time</string>
    <string name="_00">00</string>
    <string name="secs">secs</string>
    <string name="todo">TODO</string>
    <string name="watch_alert">Watch Alert</string>
    <string name="watch_notification_sound">Watch Notification Sound</string>
    <string name="watch_vibration">Watch Vibration</string>
    <string name="status">Status</string>
    <string name="sitting">Sitting</string>
    <string name="summery">Summery</string>
    <string name="stainding">Standing</string>
</resources>