<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/imgTopOverlay"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:scaleType="fitXY"
        android:src="@drawable/top_overlay"/>

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/_30sdp"
        android:textSize="@dimen/_25sdp"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/long_fox"
        android:text="@string/home"/>

    <ImageView
        android:id="@+id/imgSetting"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:src="@drawable/settings"/>

    <ScrollView
        android:layout_below="@id/imgTopOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardTime"
                app:cardCornerRadius="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:backgroundTint="@color/colorWhite"
                android:layout_height="@dimen/_150sdp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imgStatus"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_alignParentStart="true"
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="match_parent"
                        android:src="@drawable/waiting"/>

                    <TextView
                        android:id="@+id/txtStatusHeading"
                        android:layout_toEndOf="@id/imgStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:textSize="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_40sdp"
                        android:textColor="@color/colorBlack"
                        android:layout_alignParentEnd="true"
                        android:text="@string/status"/>

                    <TextView
                        android:id="@+id/txtStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/stainding"
                        android:textStyle="bold"
                        android:layout_marginStart="@dimen/_50sdp"
                        android:fontFamily="@font/falling_sky"
                        android:textSize="@dimen/_30sdp"
                        android:textColor="@color/colorTheme"
                        android:layout_below="@+id/txtStatusHeading"
                        android:layout_toEndOf="@id/imgStatus"/>

                </RelativeLayout>





            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardTwo"
                android:backgroundTint="@color/colorWhite"
                android:layout_below="@+id/cardTime"
                app:cardCornerRadius="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txtChartHeading"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_alignParentStart="true"
                        android:textStyle="bold"
                        android:fontFamily="@font/falling_sky"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_18sdp"
                        android:textColor="@color/colorBlack"
                        android:text="@string/summery"/>

                    <com.highsoft.highcharts.Core.HIChartView
                        android:layout_below="@id/txtChartHeading"
                        android:id="@+id/chart"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_180sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_10sdp" />


                </RelativeLayout>

            </androidx.cardview.widget.CardView>



        </RelativeLayout>

    </ScrollView>


</RelativeLayout>